fixed dropdown spacing

--- a/src/components/CollectionsAndPalettes/common/CollectionsToolbar/CollectionsToolbar.module.scss
+++ b/src/components/CollectionsAndPalettes/common/CollectionsToolbar/CollectionsToolbar.module.scss
@@ -147,6 +147,9 @@ a {
           right: 20px;
           margin-top: 10px;
         }
+        span {
+          padding: 10px;
+        }
       }
 
       a {
